--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,3 +1,6 @@
+@import 'components/_fonts';
+@import 'components/_client';
+
 * {
     margin: 0;
     padding: 0;
@@ -6,9 +9,97 @@
 
 a{
     text-decoration: none;
+    color: #1E1E1E;
+}
+
+html {
+    @include fontRegular;
+    color: #1E1E1E
 }
 
 body {
     max-width: 100vw;
     overflow-x: hidden;
+}
+
+.container{
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.nav{
+    display: flex;
+    width: 50%;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px auto;
+    font-size: 16px;
+}
+
+.alert{
+    padding: 20px;
+    border-radius: 5px;
+    margin-bottom: 30px;
+}
+
+.alert-success{
+    background-color: #AFCABE
+}
+
+.alert-danger{
+    background-color: #DAB6B7
+}
+
+.form__input{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 100%;
+
+    & input {
+        @include fontRegular
+    }
+}
+
+.form-label{
+    display: inline-block;
+    @include fontBold;
+    min-width: 140px;
+}
+
+.form-control{
+    border: 1px solid #4B25B2;
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px 0px #0000001F;
+    padding: 6px 12px;
+    width: 250px;
+}
+
+.btn{
+    @include fontBold;
+    padding: 10px 22px;
+    width: auto;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.12);
+    border-radius: 6px;
+    outline: none;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+
+.btn-primary{
+    background-color: #196AA6;
+    border: 1px solid #196AA6;
+    color: #FFFFFF;
+    margin-top: 30px;
+
+    &:hover{
+        transition: .4s;
+        background-color: #FFFFFF;
+        color: #000000
+    }
 }
