--- a/views/client.hbs
+++ b/views/client.hbs
@@ -21,10 +21,9 @@
       <td>{{this.email}}</td>
       <td>{{this.phone}}</td>
       <td>
-        <a href="/changeClient/{{this.ID}}" type="button">Изменить</a>
-
+        <a href="/editClientView/{{this.id}}" type="button">Изменить</a>
         <form class="row g-3 needs-validation" method="POST" action="/deleteClientAction/{{this.id}}" novalidate>
-            <button type="submit">Удаление</button>
+            <button class="noButton" type="submit">Удаление</button>
         </form>
       </td>
     </tr>
