ADD: rieltor created

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,7 +18,7 @@
         <a href="/client">Клиент</a>
         <a href="">Предложение</a>
         <a href="">Недвижимость</a>
-        <a href="">Риэлтор</a>
+        <a href="/rieltor">Риэлтор</a>
         <a href="">Поиск</a>
     </nav>
 
