--- a/views/rieltor.hbs
+++ b/views/rieltor.hbs
@@ -1,4 +1,4 @@
-<a class="addClient" href="/addClient">Добавить нового клиента</a>
+<a class="addClient" href="/addRieltor">Добавить нового риелтора</a>
 
 <table class="table table-bordered">
   <thead class="thead-dark">
@@ -6,8 +6,7 @@
       <th scope="col">Имя</th>
       <th scope="col">Фамилия</th>
       <th scope="col">Отчество</th>
-      <th scope="col">E-mail</th>
-      <th scope="col">Телефон</th>
+      <th scope="col">Комиссия</th>
       <th scope="col">Действия</th>
     </tr>
   </thead>
@@ -18,11 +17,10 @@
       <td>{{this.firstName}}</td>
       <td>{{this.lastName}}</td>
       <td>{{this.patronymic}}</td>
-      <td>{{this.email}}</td>
-      <td>{{this.phone}}</td>
+      <td>{{this.comission}}</td>
       <td>
-        <a href="/editClientView/{{this.id}}" type="button">Изменить</a>
-        <form class="row g-3 needs-validation" method="POST" action="/deleteClientAction/{{this.id}}" novalidate>
+        <a href="/editRieltorView/{{this.id}}" type="button">Изменить</a>
+        <form class="row g-3 needs-validation" method="POST" action="/deleteRieltorAction/{{this.id}}" novalidate>
             <button class="noButton" type="submit">Удаление</button>
         </form>
       </td>
