ADD: search client & rieltors

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,7 +19,7 @@
         <a href="">Предложение</a>
         <a href="">Недвижимость</a>
         <a href="/rieltor">Риэлтор</a>
-        <a href="">Поиск</a>
+        <a href="/search">Поиск</a>
     </nav>
 
     <div class="container">
