ADD: estate main

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,7 +17,7 @@
     <nav class="nav">
         <a href="/client">Клиент</a>
         <a href="">Предложение</a>
-        <a href="">Недвижимость</a>
+        <a href="/estate">Недвижимость</a>
         <a href="/rieltor">Риэлтор</a>
         <a href="/search">Поиск</a>
     </nav>
