--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'components/_fonts';
 @import 'components/_client';
 @import 'components/_search';
+@import 'components/_estate';
 
 * {
     margin: 0;
