ADD: delete estate

--- a/views/estate.hbs
+++ b/views/estate.hbs
@@ -26,7 +26,7 @@
       <td>Квартира</td>
       <td>
         <a href="/editEstateView/{{this.id}}" type="button">Изменить</a>
-        <form class="row g-3 needs-validation" method="POST" action="/deleteEstateAction/{{this.id}}" novalidate>
+        <form class="row g-3 needs-validation" method="POST" action="/deleteEstateAction/flat/{{this.id}}" novalidate>
             <button class="noButton" type="submit">Удаление</button>
         </form>
       </td>
@@ -44,7 +44,7 @@
       <td>Дом</td>
       <td>
         <a href="/editEstateView/{{this.id}}" type="button">Изменить</a>
-        <form class="row g-3 needs-validation" method="POST" action="/deleteEstateAction/{{this.id}}" novalidate>
+        <form class="row g-3 needs-validation" method="POST" action="/deleteEstateAction/house/{{this.id}}" novalidate>
             <button class="noButton" type="submit">Удаление</button>
         </form>
       </td>
@@ -62,7 +62,7 @@
       <td>Земля</td>
       <td>
         <a href="/editEstateView/{{this.id}}" type="button">Изменить</a>
-        <form class="row g-3 needs-validation" method="POST" action="/deleteEstateAction/{{this.id}}" novalidate>
+        <form class="row g-3 needs-validation" method="POST" action="/deleteEstateAction/territory/{{this.id}}" novalidate>
             <button class="noButton" type="submit">Удаление</button>
         </form>
       </td>
