ADD: search for estate

--- a/public/scss/components/_search.scss
+++ b/public/scss/components/_search.scss
@@ -29,3 +29,11 @@
 .none{
     display: none !important;
 }
+
+.search{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    margin-top: 30px;
+}
