--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,70 +1,9 @@
-<div class="searchInput">
-    <label for="searchName">Имя</label>
-    <input id="searchName" name="searchName">
+<div class="search">
+    <a href="/searchCR">
+        Поиск по клиентам и риэлторам
+    </a>
 
-    <br>
-
-    <label for="searchSurname">Фамилия</label>
-    <input id="searchSurname" name="searchSurname">
-
-    <br>
-
-    <label for="searchPatronymic">Отчество</label>
-    <input id="searchPatronymic" name="searchPatronymic">
-
-    <button id="searchButton" class="btn">Поиск</button>
+    <a href="/searchEstate">
+        Поиск по недвижимости
+    </a>
 </div>
-
-<div class="searchEnter"></div>
-
-<h2 class="searchTitle">Клиенты</h2>
-
-<table class="table table-bordered">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">Имя</th>
-      <th scope="col">Фамилия</th>
-      <th scope="col">Отчество</th>
-      <th scope="col">E-mail</th>
-      <th scope="col">Телефон</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    {{#each client}}
-    <tr>
-      <td class="searchCRFirstName">{{this.firstName}}</td>
-      <td class="searchCRLastName">{{this.lastName}}</td>
-      <td class="searchCRPatronymicName">{{this.patronymic}}</td>
-      <td>{{this.email}}</td>
-      <td>{{this.phone}}</td>
-    </tr>
-    {{/each}}
-  </tbody>
-</table>
-
-<div class="searchEnter"></div>
-
-<h2 class="searchTitle">Риэлторы</h2>
-
-<table class="table table-bordered">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">Имя</th>
-      <th scope="col">Фамилия</th>
-      <th scope="col">Отчество</th>
-      <th scope="col">Комиссия</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    {{#each rieltor}}
-    <tr>
-      <td class="searchCRFirstName">{{this.firstName}}</td>
-      <td class="searchCRLastName">{{this.lastName}}</td>
-      <td class="searchCRPatronymicName">{{this.patronymic}}</td>
-      <td>{{this.comission}}</td>
-    </tr>
-    {{/each}}
-  </tbody>
-</table>
