--- a/public/scss/components/_search.scss
+++ b/public/scss/components/_search.scss
@@ -6,6 +6,20 @@
     height: 30px;
 }
 
+.searchColumn{
+    flex-direction: column !important;
+
+    & label{
+        margin-right: 0px !important;
+        text-align: center !important;
+        margin-bottom: 10px !important;
+    }
+}
+
+#searchLongitude{
+    margin-bottom: 15px;
+}
+
 .searchInput{
     margin-top: 30px;
     display: flex;
