--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,7 +16,7 @@
 
     <nav class="nav">
         <a href="/client">Клиент</a>
-        <a href="">Предложение</a>
+        <a href="/offer">Предложение</a>
         <a href="/estate">Недвижимость</a>
         <a href="/rieltor">Риэлтор</a>
         <a href="/search">Поиск</a>
