--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -2,6 +2,7 @@
 @import 'components/_client';
 @import 'components/_search';
 @import 'components/_estate';
+@import 'components/_offer';
 
 * {
     margin: 0;
