ADD: add requirement

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -3,6 +3,7 @@
 @import 'components/_search';
 @import 'components/_estate';
 @import 'components/_offer';
+@import 'components/_requirement';
 
 * {
     margin: 0;
