ADD: rieltor/client activity

--- a/views/client.hbs
+++ b/views/client.hbs
@@ -25,6 +25,7 @@
         <form class="row g-3 needs-validation" method="POST" action="/deleteClientAction/{{this.id}}" novalidate>
             <button class="noButton" type="submit">Удаление</button>
         </form>
+        <a href="/clientActivityView/{{this.id}}" type="button">Активность</a>
       </td>
     </tr>
     {{/each}}
