--- a/views/rieltor.hbs
+++ b/views/rieltor.hbs
@@ -23,6 +23,7 @@
         <form class="row g-3 needs-validation" method="POST" action="/deleteRieltorAction/{{this.id}}" novalidate>
             <button class="noButton" type="submit">Удаление</button>
         </form>
+        <a href="/rieltorActivityView/{{this.id}}" type="button">Активность</a>
       </td>
     </tr>
     {{/each}}
