--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,6 +20,7 @@
         <a href="/requirement">Потребность</a>
         <a href="/estate">Недвижимость</a>
         <a href="/rieltor">Риэлтор</a>
+        <a href="/deal">Сделки</a>
         <a href="/search">Поиск</a>
     </nav>
 
