--- a/views/addDeal.hbs
+++ b/views/addDeal.hbs
@@ -45,6 +45,11 @@
         </div>
     </div>
 
+    <h2 style="margin-bottom: 20px;">Отчисления и комиссии</h2>
+    <p>Стоимость услуг компании для клиента-продавца: <span id="priceCompanySell"></span></p>
+    <p>Стоимость услуг компании для клиента покупателя: <span id="priceCompanyBuy"></span></p>
+    <p>Стоимость услуг риэлтора: <span id="priceCompanyBuy"></span></p>
+
     <div class="col-12">
         <button class="btn btn-primary" type="submit">Добавить</button>
     </div>
