--- a/views/client.hbs
+++ b/views/client.hbs
@@ -1,3 +1,9 @@
+{{#if AlertDelete}}
+<div class="alert alert-danger d-flex align-items-center" role="alert">
+    {{AlertDelete}}
+</div>
+{{/if}}
+
 <a class="addClient" href="/addClient">Добавить нового клиента</a>
 
 <table class="table table-bordered">
