--- a/views/search.hbs
+++ b/views/search.hbs
@@ -6,4 +6,8 @@
     <a href="/searchEstate">
         Поиск по недвижимости
     </a>
+    
+    <a href="/searchDeal">
+        Поиск по предложениям
+    </a>
 </div>
